// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScoringForm renders correctly 1`] = `
<body>
  <div>
    <form>
       
      <div
        class="score"
      >
        <div
          class="outcome-declaration"
        >
          <div
            class="outcome-declaration-header"
          >
            <h5
              class="outcome-declaration__title"
            >
              interpretation
            </h5>
             
            <a
              aria-label="see criteria for id"
              class="score-criteria"
              href="longInterpretation"
              role="button"
            >
              see scoring criteria
            </a>
          </div>
           
          <div
            aria-roledescription="Scoring input"
            class="container"
            role="application"
          >
            <label>
              0
               
              <input
                aria-label="Score 0."
                name="id"
                type="radio"
                value="0"
              />
            </label>
            <label
              class="selected"
            >
              1
               
              <input
                aria-label="Score 1."
                name="id"
                type="radio"
                value="1"
              />
            </label>
             
          </div>
        </div>
      </div>
       
       
      <label>
         
        <input
          aria-checked="false"
          aria-label=""
          class="checkbox"
          type="checkbox"
        />
         
        <span
          class="selection-container"
        />
         
        <span
          class="selection"
        />
         
        <span
          class="label"
        >
          Suspected of cheating
        </span>
      </label>
       
      <a
        aria-label="Comment (optional)"
        class="button-link"
        href="#"
      >
         
        Comment (optional)
         
      </a>
      
       
      <label>
         
        <input
          aria-checked="false"
          aria-label=""
          class="checkbox"
          type="checkbox"
        />
         
        <span
          class="selection-container"
        />
         
        <span
          class="selection"
        />
         
        <span
          class="label"
        >
          Not Enough Basis for Assessment
        </span>
      </label>
       
      <a
        aria-label="Comment (optional)"
        class="button-link"
        href="#"
      >
         
        Comment (optional)
         
      </a>
      
       
       
      <label
        class="fullwidth"
      >
        <div
          class="label-text visually-hidden"
        >
          Note
           
        </div>
         
        <div
          class="positioning-wrapper"
        >
          <textarea
            class="resize-vertical"
            cols="25"
            maxlength="500"
            name="note"
            rows="4"
          />
        </div>
      </label>
       
      <p
        class="counter"
      >
        <strong>
          500
        </strong>
         
        of 500 characters remaining
      </p>
    </form>
  </div>
</body>
`;

exports[`ScoringForm renders with not enough basis fields 1`] = `
<body>
  <div>
    <form>
       
      <div
        class="score"
      >
        <div
          class="outcome-declaration"
        >
          <div
            class="outcome-declaration-header"
          >
            <h5
              class="outcome-declaration__title"
            >
              interpretation
            </h5>
             
            <a
              aria-label="see criteria for id"
              class="score-criteria"
              href="longInterpretation"
              role="button"
            >
              see scoring criteria
            </a>
          </div>
           
          <div
            aria-roledescription="Scoring input"
            class="container"
            role="application"
          >
            <label>
              0
               
              <input
                aria-label="Score 0."
                name="id"
                type="radio"
                value="0"
              />
            </label>
            <label
              class="selected"
            >
              1
               
              <input
                aria-label="Score 1."
                name="id"
                type="radio"
                value="1"
              />
            </label>
             
          </div>
        </div>
      </div>
       
       
       
      <label>
        <div
          class="check-icon-container"
        >
          <div
            class="icon"
          >
            <svg
              aria-hidden="false"
              class="icon medium"
              viewBox="0 0 16 16"
            >
              <title>
                Checkbox checked icon
              </title>
              <path
                d="M3 6l4 4 6-7 2 2-8 9-6-6 2-2z"
              />
            </svg>
          </div>
        </div>
         
        <input
          aria-checked="true"
          aria-label=""
          class="checkbox"
          type="checkbox"
        />
         
        <span
          class="selection-container"
        />
         
        <span
          class="selection"
        />
         
        <span
          class="label"
        >
          Not Enough Basis for Assessment
        </span>
      </label>
       
      <div>
        <label
          class="fullwidth"
        >
          <div
            class="label-text visually-hidden"
          >
            Note
             
          </div>
           
          <div
            class="positioning-wrapper"
          >
            <textarea
              class="resize-vertical"
              cols="25"
              maxlength="500"
              name="not-enough-basis-note"
              placeholder="Comment (optional)"
              rows="3"
            />
          </div>
        </label>
         
        <p
          class="counter"
        >
          <strong>
            500
          </strong>
           
          of 500 characters remaining
        </p>
      </div>
      
       
       
      <label
        class="fullwidth"
      >
        <div
          class="label-text visually-hidden"
        >
          Note
           
        </div>
         
        <div
          class="positioning-wrapper"
        >
          <textarea
            class="resize-vertical"
            cols="25"
            maxlength="500"
            name="note"
            rows="4"
          />
        </div>
      </label>
       
      <p
        class="counter"
      >
        <strong>
          500
        </strong>
         
        of 500 characters remaining
      </p>
    </form>
  </div>
</body>
`;

exports[`ScoringForm renders with scoring suggestion button 1`] = `
<body>
  <div>
    <form>
      <div
        class="score-suggestion"
      >
        <button
          aria-label="Get score suggestion"
          class="actionable primary medium"
          type="button"
        >
           
           
          Get score suggestion
        </button>
      </div>
      
       
      <div
        class="score"
      >
        <div
          class="outcome-declaration"
        >
          <div
            class="outcome-declaration-header"
          >
            <h5
              class="outcome-declaration__title"
            >
              interpretation
            </h5>
             
            <a
              aria-label="see criteria for id"
              class="score-criteria"
              href="longInterpretation"
              role="button"
            >
              see scoring criteria
            </a>
          </div>
           
          <div
            aria-roledescription="Scoring input"
            class="container"
            role="application"
          >
            <label>
              0
               
              <input
                aria-label="Score 0."
                name="id"
                type="radio"
                value="0"
              />
            </label>
            <label
              class="selected"
            >
              1
               
              <input
                aria-label="Score 1."
                name="id"
                type="radio"
                value="1"
              />
            </label>
             
          </div>
        </div>
      </div>
       
       
       
       
       
      <label
        class="fullwidth"
      >
        <div
          class="label-text visually-hidden"
        >
          Note
           
        </div>
         
        <div
          class="positioning-wrapper"
        >
          <textarea
            class="resize-vertical"
            cols="25"
            maxlength="500"
            name="note"
            rows="4"
          />
        </div>
      </label>
       
      <p
        class="counter"
      >
        <strong>
          500
        </strong>
         
        of 500 characters remaining
      </p>
    </form>
  </div>
</body>
`;

exports[`ScoringForm renders with suspicious fields 1`] = `
<body>
  <div>
    <form>
       
      <div
        class="score"
      >
        <div
          class="outcome-declaration"
        >
          <div
            class="outcome-declaration-header"
          >
            <h5
              class="outcome-declaration__title"
            >
              interpretation
            </h5>
             
            <a
              aria-label="see criteria for id"
              class="score-criteria"
              href="longInterpretation"
              role="button"
            >
              see scoring criteria
            </a>
          </div>
           
          <div
            aria-roledescription="Scoring input"
            class="container"
            role="application"
          >
            <label>
              0
               
              <input
                aria-label="Score 0."
                name="id"
                type="radio"
                value="0"
              />
            </label>
            <label
              class="selected"
            >
              1
               
              <input
                aria-label="Score 1."
                name="id"
                type="radio"
                value="1"
              />
            </label>
             
          </div>
        </div>
      </div>
       
       
      <label>
        <div
          class="check-icon-container"
        >
          <div
            class="icon"
          >
            <svg
              aria-hidden="false"
              class="icon medium"
              viewBox="0 0 16 16"
            >
              <title>
                Checkbox checked icon
              </title>
              <path
                d="M3 6l4 4 6-7 2 2-8 9-6-6 2-2z"
              />
            </svg>
          </div>
        </div>
         
        <input
          aria-checked="true"
          aria-label=""
          class="checkbox"
          type="checkbox"
        />
         
        <span
          class="selection-container"
        />
         
        <span
          class="selection"
        />
         
        <span
          class="label"
        >
          Suspected of cheating
        </span>
      </label>
       
      <div>
        <label
          class="fullwidth"
        >
          <div
            class="label-text visually-hidden"
          >
            Note
             
          </div>
           
          <div
            class="positioning-wrapper"
          >
            <textarea
              class="resize-vertical"
              cols="25"
              maxlength="500"
              name="suspicious-note"
              placeholder="Comment (optional)"
              rows="3"
            />
          </div>
        </label>
         
        <p
          class="counter"
        >
          <strong>
            500
          </strong>
           
          of 500 characters remaining
        </p>
      </div>
      
       
       
       
      <label
        class="fullwidth"
      >
        <div
          class="label-text visually-hidden"
        >
          Note
           
        </div>
         
        <div
          class="positioning-wrapper"
        >
          <textarea
            class="resize-vertical"
            cols="25"
            maxlength="500"
            name="note"
            rows="4"
          />
        </div>
      </label>
       
      <p
        class="counter"
      >
        <strong>
          500
        </strong>
         
        of 500 characters remaining
      </p>
    </form>
  </div>
</body>
`;

exports[`ScoringForm renders without note box 1`] = `
<body>
  <div>
    <form>
       
      <div
        class="score"
      >
        <div
          class="outcome-declaration"
        >
          <div
            class="outcome-declaration-header"
          >
            <h5
              class="outcome-declaration__title"
            >
              interpretation
            </h5>
             
            <a
              aria-label="see criteria for id"
              class="score-criteria"
              href="longInterpretation"
              role="button"
            >
              see scoring criteria
            </a>
          </div>
           
          <div
            aria-roledescription="Scoring input"
            class="container"
            role="application"
          >
            <label>
              0
               
              <input
                aria-label="Score 0."
                name="id"
                type="radio"
                value="0"
              />
            </label>
            <label
              class="selected"
            >
              1
               
              <input
                aria-label="Score 1."
                name="id"
                type="radio"
                value="1"
              />
            </label>
             
          </div>
        </div>
      </div>
       
       
       
       
       
    </form>
  </div>
</body>
`;

exports[`ScoringForm renders without suspicious and not enough basis fields 1`] = `
<body>
  <div>
    <form>
      <div
        class="score-suggestion"
      >
        <button
          aria-label="Get score suggestion"
          class="actionable primary medium"
          type="button"
        >
           
           
          Get score suggestion
        </button>
      </div>
      
       
      <div
        class="score"
      >
        <div
          class="outcome-declaration"
        >
          <div
            class="outcome-declaration-header"
          >
            <h5
              class="outcome-declaration__title"
            >
              interpretation
            </h5>
             
            <a
              aria-label="see criteria for id"
              class="score-criteria"
              href="longInterpretation"
              role="button"
            >
              see scoring criteria
            </a>
          </div>
           
          <div
            aria-roledescription="Scoring input"
            class="container"
            role="application"
          >
            <label>
              0
               
              <input
                aria-label="Score 0."
                name="id"
                type="radio"
                value="0"
              />
            </label>
            <label
              class="selected"
            >
              1
               
              <input
                aria-label="Score 1."
                name="id"
                type="radio"
                value="1"
              />
            </label>
             
          </div>
        </div>
      </div>
       
       
       
       
       
      <label
        class="fullwidth"
      >
        <div
          class="label-text visually-hidden"
        >
          Note
           
        </div>
         
        <div
          class="positioning-wrapper"
        >
          <textarea
            class="resize-vertical"
            cols="25"
            maxlength="500"
            name="note"
            rows="4"
          />
        </div>
      </label>
       
      <p
        class="counter"
      >
        <strong>
          500
        </strong>
         
        of 500 characters remaining
      </p>
    </form>
  </div>
</body>
`;
